# img_processing

./: CMakeLists.txt
IPI/: Trabalho_01  a.out  main.cpp  teste.cpp
IPI/Q1/: 1.1.cpp  Makefile  Questão_01  Trabalho_01  Trabalho_02  canny_edge.cpp  high_pass.cpp  main.cpp
IPI/Q2/: Makefile  Questão_02  main.cpp
IPI/Q3/: Makefile  Questão_03  main.cpp  main2.cpp
paper/: CMakeLists.txt
paper/src/: main.cpp  main2.cpp  main3.cpp  main4.cpp
pylon/: main.py
pylon/myenv/: pyvenv.cfg
src/: glad.c  glad.h  main.cpp
